Fix T48703: Name inconsistency w/ area maximize/fullscreen

Name operator based on default behavior.